# jsonl

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  flask_jsonl.py  index.html  jsonl.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  search.json  setup.py  sitemap.xml  zensical.toml
.github/workflows/: cd.yml  ci.yml  codecov.yml
changes/: index.html
docs/: changes.md  dump.md  dump_archive.md  dump_fork.md  dumps.md  index.md  installation.md  load.md  load_archive.md
dump/: index.html
dump_archive/: index.html
dump_fork/: index.html
dumps/: index.html
examples/flask_jsonl/: client.py  server.py
installation/: index.html
load/: index.html
load_archive/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_dump.py  test_dump_archive.py  test_dump_fork.py  test_dump_into.py  test_dumper.py  test_dumps.py  test_load.py  test_load_archive.py  test_load_from.py  test_utilities.py  test_xfile.py
tests/acceptance/: tests.py
tests/data/: archive.tar
tests/unit/: test_dump.py  test_load.py  test_load_archive.py  test_xfile.py
