[project]
name = "py-jsonl"
version = "1.3.6"
description = "A simple Python library for handling jsonlines files."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["jsonlines", "ndjson", "jsonl"]
authors = [{ name = "rmoralespp", email = "rmoralespp@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Utilities",
    "Topic :: File Formats :: JSON",
]
requires-python = ">=3.8"

[project.urls]
Source = "https://github.com/rmoralespp/jsonl"
Changelog = "https://github.com/rmoralespp/jsonl/blob/main/CHANGELOG.md"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120
