[project]
name = "py-jsonl"
version = "1.3.7"
description = "A simple Python library for handling jsonlines files."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["jsonlines", "ndjson", "jsonl", "json", "gzip", "bzip2", "xz", "utilities"]
authors = [{ name = "rmoralespp", email = "rmoralespp@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Utilities",
    "Topic :: File Formats :: JSON",
]

[project.urls]
Source = "https://github.com/rmoralespp/jsonl"
Homepage = "https://github.com/rmoralespp/jsonl"
Changelog = "https://github.com/rmoralespp/jsonl/blob/main/CHANGELOG.md"
Issues = "https://github.com/rmoralespp/jsonl/issues"
Documentation = "https://rmoralespp.github.io/jsonl/"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    'D',  # pydocstyle
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "D103", #  Missing docstring
    "D100", #  Missing docstring in public module
    "D104", #  Missing docstring in public package
    "D202", #  No blank lines allowed after function docstring
    "D205", #  1 blank line required between summary line and description
    "D401",
    "D415",
    "D400",
    "D212",
    "D211",
    "UP009",
    "C408",
]
