[project]
name = "py-jsonl"
version = "1.3.13"
description = "A lightweight Python library for handling jsonlines files."
readme = "README.md"
license-files = ["LICENSE"]
keywords = ["jsonlines", "ndjson", "jsonl", "json", "gzip", "bzip2", "xz", "utilities", "serialization", "deserialization"]
authors = [{ name = "rmoralespp", email = "rmoralespp@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Utilities",
    "Topic :: File Formats :: JSON",
]
[dependency-groups]
doc = [
    "mkdocs",
    "mkdocs-material"
]
test = [
    "pytest",
    "coverage",
    "pytest-cov",
    "setuptools; python_version >= '3.12'",
    "ujson",
    "orjson"
]
lint = [
    "ruff"
]

[project.urls]
Source = "https://github.com/rmoralespp/jsonl"
Homepage = "https://github.com/rmoralespp/jsonl"
Changelog = "https://github.com/rmoralespp/jsonl/blob/main/CHANGELOG.md"
Issues = "https://github.com/rmoralespp/jsonl/issues"
Documentation = "https://rmoralespp.github.io/jsonl/"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    'D',  # pydocstyle
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "D103", #  Missing docstring in public function
    "D100", #  Missing docstring in public module
    "D104", #  Missing docstring in public package
    "D202", #  No blank lines allowed after function docstring
    "D205", #  1 blank line required between summary line and description
    "D212", #  Multi-line docstring summary should start at the first line
    "D211", #  No blank lines allowed before function docstring
]
